--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -8,9 +8,30 @@
         <meta name="author" content="">
         <meta name="keywords" content="">
         <title>Homepage</title>      
-        <link rel="stylesheet" type="text/css" href="./css/K.css"> 
+        <link rel="stylesheet" type="text/css" href="Homepage.css"> 
     </head>
     <body>
+        <div class="Navblock">
+            <img src="Logo_waifu_drinks_2.png" class="Logo">
+            <nav>
+                <ul>
+                    <a class="Hoofdnav" href=""><li>Home</li></a>
+                    <a class="Hoofdnav" href=""><li>Events</li></a>
+                    <a class="Hoofdnav" href=""><li>Drinks</li></a>
+                    <a class="Hoofdnav" href=""><li>Aandbiedingen</li></a>
+                    <a class="Hoofdnav" href=""><li>Sponsors</li></a>
+                    <a class="Hoofdnav" href=""><li>Contact</li></a>
+                    <a class="Hoofdnav" href=""><li>About</li></a>
+                    <a class="Hoofdnav" href=""><li>Faq</li></a>
+                </ul>
+            </nav>
+        </div>
+        <div class="Offerblock"></div>
+        <div class="Slideshowblock">
+            <img src="Screenshot_4.png">
+
+        </div>
+
 
 
     </body>
