--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -11,10 +11,11 @@
         <link rel="stylesheet" type="text/css" href="Homepage.css"> 
     </head>
     <body>
-        <div class="Navblock">
-            <img src="Logo_waifu_drinks_2.png" class="Logo">
-            <nav>
-                <ul>
+        <header>
+            <div class="Navblock">
+               <img src="Logo_waifu_drinks_2.png" class="Logo">
+              <nav>
+                  <ul>
                     <a class="Hoofdnav" href=""><li>Home</li></a>
                     <a class="Hoofdnav" href=""><li>Events</li></a>
                     <a class="Hoofdnav" href=""><li>Drinks</li></a>
@@ -23,15 +24,27 @@
                     <a class="Hoofdnav" href=""><li>Contact</li></a>
                     <a class="Hoofdnav" href=""><li>About</li></a>
                     <a class="Hoofdnav" href=""><li>Faq</li></a>
-                </ul>
-            </nav>
-        </div>
+                 </ul>
+                </nav>
+             </div>
+        </header>
         <div class="Offerblock"></div>
         <div class="Slideshowblock">
-            <img src="Screenshot_4.png">
+            <img src="Drinks placeholder.png">
 
         </div>
-
+        <main class="Events"> 
+            <div class="Eventshblock"></div>
+            <div class="Eventsblock">
+                <img src="" id="EventImg1">
+                <div id="Event1"></div>
+                <img src="" id="EventImg2">
+                <div id="Event2"></div>
+                <img src="" id="EventImg3">
+                <div id="Event3"></div>
+            </div>
+        </main>
+        <div class="Footerblock"></div>
 
 
     </body>
