--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -30,7 +30,8 @@
         </header>
         <div class="Offerblock"></div>
         <div class="Slideshowblock">
-            <img src="Drinks placeholder.png">
+            <img src="violet Evergarden.png" >
+            <!--<img src="Drinks placeholder.png">--->
 
         </div>
         <main class="Events"> 
