--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -37,11 +37,11 @@
         <main class="Events"> 
             <div class="Eventshblock"></div>
             <div class="Eventsblock">
-                <img src="" id="EventImg1">
+                <img src="EventP1.png" id="EventImg1">
                 <div id="Event1"></div>
-                <img src="" id="EventImg2">
+                <img src="EventP2.png" id="EventImg2">
                 <div id="Event2"></div>
-                <img src="" id="EventImg3">
+                <img src="EventP3.png" id="EventImg3">
                 <div id="Event3"></div>
             </div>
         </main>
