--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -11,29 +11,31 @@
         <link rel="stylesheet" type="text/css" href="Homepage.css"> 
     </head>
     <body>
-        <header>
-            <div class="Navblock">
-               <img src="Logo_waifu_drinks_2.png" class="Logo">
-              <nav>
-                  <ul>
-                    <a class="Hoofdnav" href=""><li>Home</li></a>
-                    <a class="Hoofdnav" href=""><li>Events</li></a>
-                    <a class="Hoofdnav" href=""><li>Drinks</li></a>
-                    <a class="Hoofdnav" href=""><li>Aandbiedingen</li></a>
-                    <a class="Hoofdnav" href=""><li>Sponsors</li></a>
-                    <a class="Hoofdnav" href=""><li>Contact</li></a>
-                    <a class="Hoofdnav" href=""><li>About</li></a>
-                    <a class="Hoofdnav" href=""><li>Faq</li></a>
-                 </ul>
-                </nav>
-             </div>
-        </header>
         <div class="Offerblock"></div>
         <div class="Slideshowblock">
-            <img src="violet Evergarden.png" >
+            <img src="violet Evergardenn.png" class="Slideshowimg" width="1000%">
             <!--<img src="Drinks placeholder.png">--->
 
         </div>
+        <header>
+            <div class="Navblock">
+               <img src="Logo_waifu_drinks_2.png" class="Logo">
+              <nav class="nav">
+                  <ul>
+                    <a class="Hoofdnav" href="#home"><li>Home</li></a>
+                    <a class="Hoofdnav" href="#"><li>Events</li></a>
+                    <a class="Hoofdnav" href="#"><li>Drinks</li></a>
+                    <a class="Hoofdnav" href="#"><li>Aandbiedingen</li></a>
+                    <a class="Hoofdnav" href="#"><li>Sponsors</li></a>
+                    <a class="Hoofdnav" href="#"><li>Contact</li></a>
+                    <a class="Hoofdnav" href="#"><li>About</li></a>
+                    <a class="Hoofdnav" href="#"><li>Faq</li></a>
+                 </ul>
+                </nav>
+            </div> 
+        </header>
+        
+        
         <main class="Events"> 
             <div class="Eventshblock"></div>
             <div class="Eventsblock">
