--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -11,24 +11,34 @@
         <link rel="stylesheet" type="text/css" href="Homepage.css"> 
     </head>
     <body>
-        <div class="Offerblock"></div>
+        <div class="Offerblock">
+            <p>1 + 1 Gratis nieuwe offer eindigt 10:00:00:00</p>
+        </div>
         <div class="Slideshowblock">
             <img src="violet Evergardennn.png" class="Slideshowimg" width="1546" height="800" >
             <!--<img src="Drinks placeholder.png">--->
 
         </div>
         <div class="Events">
-            <div class="Eventshblock"></div>
+            <div class="Eventshblock">
+                <h1>Events</h1>
+            </div>
         </div>
         <main class="Events2"> 
             
             <div class="Eventsimg">       
                 <img src="EventP1.png" id="EventImg1">
-                <div id="Event1"></div>  
+                <div id="Event1">
+                    <p>artiest</p>
+                </div>  
                 <img src="EventP2.png" id="EventImg2">
-                <div id="Event2"></div>
+                <div id="Event2">
+                    <p>artiest</p>
+                </div>
                 <img src="EventP3.png" id="EventImg3">
-                <div id="Event3"></div>
+                <div id="Event3">
+                    <p>artiest</p>
+                </div>
             </div>
         </main>
         <div class="Footerblock"></div>
