--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=""> 
-    <meta name="author" content="Kevin Xue">
+    <meta name="author" content="Robbert Bons">
     <meta name="keywords" content=" ">
-    <title>Sponsors Pagina</title>
+    <title>Contact Pagina</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
 
 </head>
