--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -5,7 +5,7 @@
         <meta http-equiv="language" content="NL">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="author" content="Mikey Nowack">
         <meta name="keywords" content="">
         <title>Homepage</title>      
         <link rel="stylesheet" type="text/css" href="Homepage.css"> 
@@ -30,6 +30,7 @@
                 <img src="EventP1.png" id="EventImg1">
                 <div id="Event1">
                     <p>artiest</p>
+                    <p></p>
                 </div>  
                 <img src="EventP2.png" id="EventImg2">
                 <div id="Event2">
