--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -24,7 +24,9 @@
             </nav>
         </section>
     </header>
-
+    <main>
+      
+    </main>
     <div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger"><div></div></div>
