--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <header>
+      <div class="Offerblock">
+        <p>1 + 1 Gratis nieuwe offer eindigt 10:00:00:00</p>
+      </div>
         <section id="header1">
             <a href="#"><img src="images/Logo_waifu_drinks_2.png" alt=""></a>
             <nav>
@@ -23,10 +26,46 @@
                 <li><a href="#">Contact</a></li>
             </nav>
         </section>
+        <div class="wallpaper">
+          <img src="violet Evergardennn.png" class="wallpaper" width="1546" height="800" >
+          <!--<img src="Drinks placeholder.png">--->
+        <h1 class="Title">Contact</h1>
+         </div>
     </header>
     <main>
-      
+      <h2>Naam</h2>
+      <table> 
+       <form>
+         <tr>
+           <td><input class="item-1" type="text" name="voornaam" placeholder="Vul hier je naam in"></td>
+         </tr>
+       </form> 
+      </table>
+      <h2>Email</h2>
+      <table> 
+        <form>
+          <tr>
+            <td><input class="item-1" type="text" name="email" placeholder="Vul hier je emailadres in"></td>
+          </tr>
+        </form> 
+       </table>
+      <h2>Telefoon</h2>
+      <table> 
+        <form>
+          <tr>
+            <td><input class="item-1" type="text" name="Telefoon" placeholder="Vul hier je telefoonnummer in"></td>
+          </tr>
+        </form> 
+       </table>
+       <table> 
+        <form>
+          <tr>
+            <td><input class="item-1" type="text" name="Onderwerp" placeholder="Onderwerp"></td>
+          </tr>
+        </form> 
+       </table>
     </main>
+
     <div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger"><div></div></div>
