--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Robbert Bons">
     <meta name="keywords" content=" ">
     <title>Contact Pagina</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    <link rel="stylesheet" type="text/css" href="css/Contact.css"> 
 
 </head>
 <body>
@@ -45,7 +45,7 @@
       <table> 
         <form>
           <tr>
-            <td><input class="item-1" type="text" name="email" placeholder="Vul hier je emailadres in"></td>
+            <td><input class="item-2" type="text" name="email" placeholder="Vul hier je emailadres in"></td>
           </tr>
         </form> 
        </table>
@@ -53,14 +53,15 @@
       <table> 
         <form>
           <tr>
-            <td><input class="item-1" type="text" name="Telefoon" placeholder="Vul hier je telefoonnummer in"></td>
+            <td><input class="item-3" type="text" name="Telefoon" placeholder="Vul hier je telefoonnummer in"></td>
           </tr>
         </form> 
        </table>
        <table> 
         <form>
           <tr>
-            <td><input class="item-1" type="text" name="Onderwerp" placeholder="Onderwerp"></td>
+            <td><input class="item-4" type="text" name="Onderwerp" placeholder="Onderwerp"></td>
+            <td><input class="item-5" type="text" name="Vraag/klacht" placeholder="Onderwerp"></td>
           </tr>
         </form> 
        </table>
