--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -33,6 +33,8 @@
          </div>
     </header>
     <main>
+
+      <article>
       <h2>Naam</h2>
       <table> 
        <form>
@@ -41,6 +43,9 @@
          </tr>
        </form> 
       </table>
+      </article>
+
+      <article>
       <h2>Email</h2>
       <table> 
         <form>
@@ -49,6 +54,9 @@
           </tr>
         </form> 
        </table>
+      </article>
+
+       <article>
       <h2>Telefoon</h2>
       <table> 
         <form>
@@ -57,14 +65,23 @@
           </tr>
         </form> 
        </table>
+      </article>
+
+       <article>
        <table> 
         <form>
           <tr>
             <td><input class="item-4" type="text" name="Onderwerp" placeholder="Onderwerp"></td>
-            <td><input class="item-5" type="text" name="Vraag/klacht" placeholder="Onderwerp"></td>
           </tr>
         </form> 
        </table>
+       </article>
+       <label for="myRadioId" class="radio">
+            <input type="radio" name="myRadioField" id="myRadioId" class="radio__input">
+            <div class="radio__input"></div>
+            Vraag
+       </label>
+
     </main>
 
     <div class="menu-wrap">
@@ -104,3 +121,4 @@
 
 
 </body>
+</html>
