--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -16,7 +16,7 @@
         <p>1 + 1 Gratis nieuwe offer eindigt 10:00:00:00</p>
       </div>
         <section id="header1">
-            <a href="#"><img src="images/Logo_waifu_drinks_2.png" alt=""></a>
+            <a href="#"><img src="images/Logo waifu drinks.png" alt=""></a>
             <nav>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Smaken</a></li>
