--- a/Aanbiedingen/index.html
+++ b/Aanbiedingen/index.html
@@ -29,7 +29,9 @@
         <h3>Nieuwe aanbieding</h3>
         </section>
 
-    <img src="images/header-img.png">     
+    <img src="images/header-img.png">
+         
+    <div id="title"><h1>Aanbiedingen</h1></div>
 
     <div class="container">
         <div class="aanbieding">
