--- a/Aanbiedingen/index.html
+++ b/Aanbiedingen/index.html
@@ -26,7 +26,7 @@
 
     <main>
         <section id="bar">
-        <h3>Nieuwe aanbieding</h3>
+            <h3>Nieuwe aanbieding</h3>
         </section>
 
     <img src="images/header-img.png">
@@ -35,13 +35,23 @@
 
     <div class="container">
         <div class="aanbieding">
+            <h4>Grote X-Knaller</h4>
+                <div class="aanbieding-img"><img src="images/aanbieding img.PNG"></div>
+                    <p>Van deze aanbieding wordt u blij!</p>
+        </div>   
+
+        <div class="aanbieding">
+            <h4>Doldwaze dagen</h4>
+                <div class="aanbieding-img"><img src="images/aanbieding img.PNG"></div>
+                    <p>Lekker knallen!</p>
+        </div>  
+
+        <div class="aanbieding">
             <h4>Lenteactie</h4>
-            <div class="aanbieding-img"><img src="images/aanbieding img.PNG"></div>
-            <p>Van deze aanbieding wordt u blij!</p>
-        </div>
-        <div class="aanbieding"><img src="images/aanbieding img.PNG"></div>
-        <div class="aanbieding"><img src="images/aanbieding img.PNG"></div>
-      </div>
+                <div class="aanbieding-img"><img src="images/aanbieding img.PNG"></div>
+                    <p>Lenteactie</p>
+        </div>    
+    </div>
     </main>
 </body>
 </html>
