--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=""> 
+    <meta name="description" content="">
     <meta name="author" content="Robbert Bons">
     <meta name="keywords" content=" ">
     <title>Contact Pagina</title>
-    <link rel="stylesheet" type="text/css" href="css/Contact.css"> 
+    <link rel="stylesheet" type="text/css" href="css/Contact.css">
+    <style>
+    body{
+      display: flex;
+    }
 
+    header {
+      width: 25vw;
+      color: white;
+      background-colour: black;
+    }
+
+    main{
+      width: 25;
+      background-colour: purple;
+    }
+    </style>
 </head>
 <body>
     <header>
@@ -17,17 +32,17 @@
       </div>
         <section id="header1">
             <a href="#"><img src="images/Logo waifu drinks.png" alt=""></a>
-            <nav>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Smaken</a></li>
-                <li><a href="#">Aanbiedingen</a></li>
-                <li><a href="#">Sponsors</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+            <nav id="hoofdmenu">
+              <a>Contact</a>
+              <a>Home</a>
+              <a>Sponsor</a>
+              <a>About</a>
+              <a>Aanbiedingen</a>
+
             </nav>
         </section>
         <div class="wallpaper">
-          <img src="violet Evergardennn.png" class="wallpaper" width="1546" height="800" >
+          <img src="images/NhRrw7.jpg" class="wallpaper" width="1546" height="800" >
           <!--<img src="Drinks placeholder.png">--->
         <h1 class="Title">Contact</h1>
          </div>
@@ -36,89 +51,47 @@
 
       <article>
       <h2>Naam</h2>
-      <table> 
+      <table>
        <form>
          <tr>
            <td><input class="item-1" type="text" name="voornaam" placeholder="Vul hier je naam in"></td>
          </tr>
-       </form> 
+       </form>
       </table>
       </article>
 
       <article>
       <h2>Email</h2>
-      <table> 
+      <table>
         <form>
           <tr>
             <td><input class="item-2" type="text" name="email" placeholder="Vul hier je emailadres in"></td>
           </tr>
-        </form> 
+        </form>
        </table>
       </article>
 
        <article>
       <h2>Telefoon</h2>
-      <table> 
+      <table>
         <form>
           <tr>
             <td><input class="item-3" type="text" name="Telefoon" placeholder="Vul hier je telefoonnummer in"></td>
           </tr>
-        </form> 
+        </form>
        </table>
       </article>
 
        <article>
-       <table> 
+       <table>
         <form>
           <tr>
             <td><input class="item-4" type="text" name="Onderwerp" placeholder="Onderwerp"></td>
           </tr>
-        </form> 
+        </form>
        </table>
        </article>
-       <label for="myRadioId" class="radio">
-            <input type="radio" name="myRadioField" id="myRadioId" class="radio__input">
-            <div class="radio__input"></div>
-            Vraag
-       </label>
 
     </main>
-
-    <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
-        <div class="hamburger"><div></div></div>
-        <div class="menu">
-          <div>
-            <div>
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Smaken</a></li>
-                <li><a href="#">Aanbiedingen</a></li>
-                <li><a href="#">Sponsors</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    <section class="blok">
-    </section>
-
-    <section class="blok2">
-    </section>
-
-    <section class="blok3">
-    </section>
-
-    
-
-
-
-
-
-
-
 </body>
 </html>
