Progressie met PHP
eerst in een omgeving alles uittesten voordat het in de officiele komt

--- a/Aanbiedingen/index.html
+++ b/Aanbiedingen/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Tim Slaghekke">
     <meta name="keywords" content=" ">
     <title>Aanbiedingen</title>
-    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
 <body>
     <header>
