--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -12,9 +12,11 @@
 
 <body>
     <header>
-      <div class="Offerblock">
+
+      <section class="Offerblock">
         <p>1 + 1 Gratis nieuwe offer eindigt 10:00:00:00</p>
-      </div>
+      </section>
+
         <section id="header1">
             <a href="#"><img src="images/Logo waifu drinks.png" alt=""></a>
             <nav id="hoofdmenu">
@@ -25,15 +27,14 @@
               <a>Aanbiedingen</a>
             </nav>
         </section>
-
-        <div class="wallpaper">
-          <img src="images/NhRrw7.jpg" class="wallpaper" width="1600" height="800" >
-          <!--<img src="Drinks placeholder.png">--->
-        <h1 class="Title">Contact</h1>
-         </div>
-         
     </header>
     <main>
+
+      <div class="wallpaper">
+        <img src="images/NhRrw7.jpg" class="wallpaper" width="1600" height="800" >
+        <!--<img src="Drinks placeholder.png">--->
+      <h1 class="Title">Contact</h1>
+       </div>
 
       <article>
         <h2>Naam</h2>
