30 maart Contact pagina

--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -7,16 +7,11 @@
     <meta name="author" content="Robbert Bons">
     <meta name="keywords" content=" ">
     <title>Contact Pagina</title>
-    <link rel="stylesheet" type="text/css" href="css/Contact.css">
+    <link rel="stylesheet" type="text/css" href="css\contact.css">
 </head>
 
 <body>
     <header>
-
-      <section class="Offerblock">
-        <p>1 + 1 Gratis nieuwe offer eindigt 10:00:00:00</p>
-      </section>
-
         <section id="header1">
             <a href="#"><img src="images/Logo waifu drinks.png" alt=""></a>
             <nav id="hoofdmenu">
@@ -29,7 +24,10 @@
         </section>
     </header>
     <main>
-
+      <section class="Offerblock">
+        <p>1 + 1 Gratis nieuwe offer eindigt 10:00:00:00</p>
+      </section>
+      
       <div class="wallpaper">
         <img src="images/NhRrw7.jpg" class="wallpaper" width="1600" height="800" >
         <!--<img src="Drinks placeholder.png">--->
