--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -12,69 +12,69 @@
 
 <body>
     <header>
-        <section id="header1">
-            <a href="#"><img src="images/Logo waifu drinks.png" alt=""></a>
-            <nav id="hoofdmenu">
-              <a>Contact</a>
-              <a>Home</a>
-              <a>Sponsor</a>
-              <a>About</a>
-              <a>Aanbiedingen</a>
-            </nav>
-        </section>
+        <img src="images/Logo waifu drinks.png" class="Logo">
+          <nav>
+              <a class="Hoofdnav" href="#home"><li>Home</li></a>
+                  <a class="Hoofdnav" href="#"><li>Events</li></a>
+                  <a class="Hoofdnav" href="#"><li>Drinks</li></a>
+                  <a class="Hoofdnav" href="#"><li>Aandbiedingen</li></a>
+                  <a class="Hoofdnav" href="#"><li>Sponsors</li></a>
+                  <a class="Hoofdnav" href="#"><li>Contact</li></a>
+                  <a class="Hoofdnav" href="#"><li>About</li></a>
+                  <a class="Hoofdnav" href="#"><li>Faq</li></a>
+          </nav>
     </header>
     <main>
-      <section class="Offerblock">
-        <p>1 + 1 Gratis nieuwe offer eindigt 10:00:00:00</p>
-      </section>
+          <section class="Offerblock">
+            <p>1 + 1 Gratis nieuwe offer eindigt 10:00:00:00</p>
+          </section>
       
       <div class="wallpaper">
-        <img src="images/NhRrw7.jpg" class="wallpaper" width="1600" height="800" >
-        <!--<img src="Drinks placeholder.png">--->
-      <h1 class="Title">Contact</h1>
+        <img src="images/NhRrw7.jpg" class="background" width="1600" height="800" >
+        <h1 class="Title">Contact</h1>
        </div>
 
-      <article>
+      <article class="naam">
         <h2>Naam</h2>
-          <table>
        <form>
       <tr>
         <td><input class="item-1" type="text" name="voornaam" placeholder="Vul hier je naam in"></td>
       </tr>
       </form>
-      </table>
       </article>
 
-      <article>
+      <article class="email">
       <h2>Email</h2>
-      <table>
         <form>
           <tr>
             <td><input class="item-2" type="text" name="email" placeholder="Vul hier je emailadres in"></td>
           </tr>
         </form>
-       </table>
       </article>
 
-       <article>
+       <article class="telefoon">
       <h2>Telefoon</h2>
-      <table>
         <form>
           <tr>
             <td><input class="item-3" type="text" name="Telefoon" placeholder="Vul hier je telefoonnummer in"></td>
           </tr>
         </form>
-       </table>
       </article>
 
-       <article>
-       <table>
+      <article class="onderwerp">
         <form>
           <tr>
-            <td><input class="item-4" type="text" name="Onderwerp" placeholder="Onderwerp"></td>
+            <td><input class="item-4" type="text" name="Onderwerp" placeholder="bericht"></td>
           </tr>
         </form>
-       </table>
+       </article>
+
+       <article class="bericht">
+        <form>
+          <tr>
+            <td><input class="item-4" type="text" name="Type hier uw bericht" placeholder="bericht"></td>
+          </tr>
+        </form>
        </article>
 
     </main>
