--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -61,10 +61,15 @@
         </form>
       </article>
 
+      <article class="Button">
+      <input type="radio" value='klacht' name='klacht'> klacht
+      <input type="radio" value='vraag'  name='vraag'> vraag
+      </article>
+
       <article class="onderwerp">
         <form>
           <tr>
-            <td><input class="item-4" type="text" name="Onderwerp" placeholder="bericht"></td>
+            <td><input class="item-4" type="text" name="Onderwerp" placeholder="onderwerp"></td>
           </tr>
         </form>
        </article>
