--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -66,18 +66,18 @@
       <input type="radio" value='vraag'  name='vraag'> vraag
       </article>
 
-      <article class="onderwerp">
-        <form>
-          <tr>
-            <td><input class="item-4" type="text" name="Onderwerp" placeholder="onderwerp"></td>
-          </tr>
-        </form>
-       </article>
+      <button class="accordion" id="accPanel1">Onderwerp</button>
+      <div class="panel">
+        <p>Aanbiedingen</p>
+        <p>Contact</p>
+        <p>Sponsors</p>
+        <p>About</p>
+      </div>
 
        <article class="bericht">
         <form>
           <tr>
-            <td><input class="item-4" type="text" name="Type hier uw bericht" placeholder="bericht"></td>
+            <td><input class="item-4" type="text" name="Type hier uw bericht" placeholder="bericht" width="50%"></td>
           </tr>
         </form>
        </article>
