--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -77,7 +77,7 @@
        <article class="bericht">
         <form>
           <tr>
-            <td><input class="item-4" type="text" name="Type hier uw bericht" placeholder="bericht" width="50%"></td>
+            <td><input class="item-4" type="text" name="Type hier uw bericht" placeholder="bericht"></td>
           </tr>
         </form>
        </article>
