--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -27,7 +27,7 @@
       <section class="Offerblock">
         <p>1 + 1 Gratis nieuwe offer eindigt 10:00:00:00</p>
       </section>
-      
+
       <div class="wallpaper">
         <img src="images/NhRrw7.jpg" class="wallpaper" width="1600" height="800" >
         <!--<img src="Drinks placeholder.png">--->
@@ -65,6 +65,11 @@
           </tr>
         </form>
        </table>
+      </article>
+
+      <article class="Button">
+        <input type="radio" value='klacht' name='klacht'> klact
+        <input type="radio" value='vraag' name='vraag'> vraag
       </article>
 
        <article>
