--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -62,8 +62,8 @@
       </article>
 
       <article class="Button">
-      <input type="radio" value='klacht' name='klacht'> klacht
-      <input type="radio" value='vraag'  name='vraag'> vraag
+        <input type="radio" value='klacht' name='klacht'> klacht
+        <input type="radio" value='vraag'  name='vraag'> vraag
       </article>
 
       <button class="accordion" id="accPanel1">Onderwerp</button>
@@ -81,6 +81,7 @@
           </tr>
         </form>
        </article>
+      <img src="images/Instagram" width="800" height="400">  
 
     </main>
 </body>
