--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -30,8 +30,11 @@
       </section>
 
       <div class="wallpaper">
-        <img src="images/NhRrw7.jpg" class="background" width="1600" height="800" >
-        <h1 class="Title">Contact</h1>
+        <img src="images/NhRrw7.jpg" class="background" style="width:100%" >
+       </div>
+
+       <div class="Title">
+         <h1>Contact</h1>
        </div>
 
       <article class="naam">
@@ -74,14 +77,10 @@
         <p>About</p>
       </div>
 
-       <article class="bericht">
-        <form>
-          <tr>
-            <td><input class="item-4" type="text" name="Type hier uw bericht" placeholder="bericht"></td>
-          </tr>
-        </form>
-       </article>
-      <img src="images/Instagram" width="800" height="400">  
+      <form action="" metod="post">
+      <label> bericht: <br><textarea cols="45" rows="5" name="mes"></textarea></label></br>
+      <input type="submit" name="Versturen" value="post">
+      </form>
 
     </main>
 </body>
