--- a/Aanbiedingen/index.html
+++ b/Aanbiedingen/index.html
@@ -36,19 +36,19 @@
     <div class="container">
         <div class="aanbieding">
             <h4>Grote X-Knaller</h4>
-                <div class="aanbieding-img"><img src="images/aanbieding img.PNG"></div>
+                <div class="aanbieding-img"><img src="images/aanbieding img.PNG" style="width:100%"></div>
                     <p>Van deze aanbieding wordt u blij!</p>
         </div>   
 
         <div class="aanbieding">
             <h4>Doldwaze dagen</h4>
-                <div class="aanbieding-img"><img src="images/aanbieding img.PNG"></div>
+                <div class="aanbieding-img"><img src="images/aanbieding img.PNG" style="width:100%"></div>
                     <p>Lekker knallen!</p>
         </div>  
 
         <div class="aanbieding">
             <h4>Lenteactie</h4>
-                <div class="aanbieding-img"><img src="images/aanbieding img.PNG"></div>
+                <div class="aanbieding-img"><img src="images/aanbieding img.PNG" style="width:100%"></div>
                     <p>Lenteactie</p>
         </div>    
     </div>
