--- a/Aanbiedingen/index.html
+++ b/Aanbiedingen/index.html
@@ -10,19 +10,35 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
 <body>
-    <header>
-        <img src="images/Logo waifu drinks.png">
+    <header id="nav-bar">
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Aanbiedingen</a></li>
-                <li><a href="#">Smaken</a></li>
-                <li><a href="#">Sponsors</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+        <a href="#"><img src="images/Logo_waifu_drinks_2.png" alt=""></a>
+            <section id="navbar">
+                    <ul>
+                        <li><a href="homepagina.php">Home</a></li>
+                        <li><a href="#">Aanbiedingen</a></li>
+                        <li><a href="sponsorpagina.php">Sponsors</a></li>
+                        <li><a href="aboutpagina.php">About</a></li>
+                        <li><a href="contactpagina.php">Contact</a></li>
+                    </ul>
+            </section>
+            <section id="navbar-small">
+            <details>
+            <summary><h1>☰</h1></summary>
+            <nav id="item-nav">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Smaken</a></li>
+                        <li><a href="#">Aanbiedingen</a></li>
+                        <li><a href="sponsorpagina.php">Sponsors</a></li>
+                        <li><a href="aboutpagina.php">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </details>
+            </section>
         </nav>
-    </header>
+</header>
 
     <main>
         <section id="bar">
